Issue 465 Footer block titles matches text alignment
Support if blocks in footer turn on block titles.

--- a/themes/elmcip/css/layout-fixed.css
+++ b/themes/elmcip/css/layout-fixed.css
@@ -387,12 +387,20 @@ div.group-meta {
   margin: 0;
 }
 
+.region-footer h2.block-title {
+  text-align: left;
+}
+
 .region-footer .block:nth-of-type(3n+1) {
   margin-left: 0;
 }
 
 .region-footer .block:nth-of-type(3n) {
   margin-right: 0;
+}
+
+.region-footer .block:nth-of-type(3n) h2.block-title {
+  text-align: right;
 }
 
 .region-bottom {
